--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -27,19 +27,19 @@
 				<div class="col-md-4">
 					<p>Fan? Drop a note.</p>
 					<p>
-						<span class="glyphicon glyphicon-map-marker"></span>Bitter Code
+						<span class="glyphicon glyphicon-map-marker"></span> 2, Chuim Village Rd, Khar, Union Park, Pali Hill, Mumbai, Maharashtra - 400052
 					</p>
 					<p>
-						<span class="glyphicon glyphicon-phone"></span>Phone: +91
-						1515151515
+						<span class="glyphicon glyphicon-phone"></span> Phone: +91
+						9990165966
 					</p>
 					<p>
-						<span class="glyphicon glyphicon-envelope"></span>Email:
-						thebittercode@gmail.com
+						<span class="glyphicon glyphicon-envelope"></span> Email:
+						jethalalchampaklalgadagujrati@gmail.com
 					</p>
 					<p>
 						<span class="glyphicon glyphicon-copyright-mark"></span>
-						BitterCode - 2023
+						 Gada Electronics - 2025
 					</p>
 				</div>
 				<div class="col-md-8">
